--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
       "url": "http://www.opensource.org/licenses/GPL-2.0"
     }
   ],
-  "dependencies": {},
+  "dependencies": {
+      "jquery": ">=1.5",
+      "jquery.transit" : ">=0.1.3"
+  },
   "devDependencies": {
   },
   "keywords": [ "animation", "text" ]
